# FYP-Processing

./: .gitignore  .gitignore.swp  Aman - TO DO.md  AssemblyInfo.cpp  CMakeLists.txt  CommandInterface.cpp  CommandInterface.hpp  CommandLibrary.cpp  CommandLibrary.h  CommandWrap.cpp  CommandWrap.h  Definitions.hpp  Flags.hh  ModelBuilder.cpp  ModelBuilder.hpp  PolyhedronBuilder.cpp  PolyhedronBuilder.hpp  README.md  ReadMe.txt  Shit So Far.docx  Stdafx.cpp  Stdafx.h  UnmanagedWrap.sln  UnmanagedWrap.vcxproj  UnmanagedWrap.vcxproj.filters  cgalProcessing.cpp  cgalProcessing.h  pclProcessing.cpp  pclProcessing.h  polyhedronBuilders.h  processing.cpp  processing.h  processing.hpp  processingIO.cpp  processingIO.hpp  test.cpp  vcgProcessing.cpp  vcgProcessing.h
ManagedProcessing/: ManagedProcessing.csproj  MeshProcessor.cs  ProcessFunction.cs  RESTFunctions.cs  StorageWrappers.cs  proxies.json
ManagedProcessing/Properties/: launchSettings.json
ManagedProcessing/Properties/PublishProfiles/: ManagedProcessing - Web Deploy.pubxml
UnmanagedWrapTest/: Program.cs  UnmanagedWrapTest.csproj
UnmanagedWrapTest/Properties/: AssemblyInfo.cs
UnusedCPPfiles/: PolyhedronBuilder.cpp  PolyhedronBuilder.hpp  pclProcessing.cpp  pclProcessing.h  processing.cpp  processing.h  processingIO.cpp  processingIO.hpp  vcgProcessing.h
UnusedCPPfiles/PLY IO/: ply_to_obj.c
UnusedCPPfiles/VN/: ComputeFacetNormal.h  ComputeVertexNormal.h  ImportOBJ.h  PropertyMap.h  TestComputeVertexNormal.cpp
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
libs/meshlab/src/: Makefile
meshlab/docs/doxygen/html/: _g_l_log_stream_8h_source.html  annotated.html  class_g_l_log_stream-members.html  class_g_l_log_stream.html  class_main_window_interface-members.html  class_main_window_interface.html  class_mesh_decorate_interface-members.html  class_mesh_decorate_interface.html  class_mesh_edit_interface_factory-members.html  class_mesh_edit_interface_factory.html  class_mesh_filter_interface-members.html  classes.html  (+37 more)
models/: Chi_11.off  Chi_11.ply  PLY335Roof.ply  dump.off  testing copy.ply  testing.ply
models/Logs/: C3T3
models/OFF/: 335SMG.off
models/PLY/: 335Floor.ply  335Roof.ply  335SMG.mesh  335_downsampled.ply  advancing2.off  custom_output.ply  debugLog.txt  dotnetFloor.ply  dotnetHull.ply  dotnetconcaveHull.ply  floor.ply  modelModel.ply  poly_output.off  rorFiltered.ply  sorFiltered.ply  wall.ply  y15.ply
models/PLY/CGAL/: 0.ply  01.off  1.ply  2.ply  3.ply  4.ply  5.ply  6.ply  7.ply
models/pres/: 1Removed.ply  2Removed.ply  downsampled.ply
vcglib/apps/sample/: Makefile
vcglib/apps/trimeshinfo/: Makefile
(+568 files in other folders)
